UtahLiveDataTest/src/objects/Object__c.object
<CustomObject>
    <description>This is created for the Program coding block for USBE.</description>
    <fields>
        <fullName>CodeFromFINET__c</fullName>
        <label>Code From FINET</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedInFINET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted In FINET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FiscalYearName__c</fullName>
        <formula>FiscalYear__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MST: Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>Objects</relationshipLabel>
        <relationshipName>Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ValueFromFINET__c</fullName>
        <label>OBJ_NM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Object</label>
    <nameField>
        <label>OBJ_CD</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>